Added general schema timezone offset, blog offset overrides the general one

--- a/server/liveblog/prepopulate/app_prepopulate_data.json
+++ b/server/liveblog/prepopulate/app_prepopulate_data.json
@@ -41,6 +41,20 @@
     }
 },
 {
+    "resource": "global_preferences",
+    "data": {
+        "key": "quote_style",
+        "value": "en"
+    }
+},
+{
+    "resource": "global_preferences",
+    "data": {
+        "key": "general_json_ld_timezone_offset",
+        "value": 0
+    }
+},
+{
     "resource": "themes",
     "id_name": "-id theme default-",
     "data": {
